# livraria_db_teste

./: db.sqlite3  pyproject.toml
__pypackages__/: .gitignore
config/: settings.py  urls.py
livraria/: admin.py  models.py  serializers.py  views.py
livraria/migrations/: 0001_initial.py  0002_editora.py  0003_autor_livro.py  0004_livro_autores.py
livraria/models/: __init__.py  editora.py  livro.py
